--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -39,6 +39,7 @@
           <li><a href="{% url 'user_profile_index' %}">Users</a></li>
           <li><a href="{% url 'film_index' %}">Films</a></li>
           <li><a href="{% url 'film_list_index' %}">Lists</a></li>
+          <li><a href="{% url 'forum_index' %}">Forums</a></li>
           <li><a href="{% url 'torrent_request_index' %}">Torrent Requests</a></li>
           <li><a href="{% url 'reseed_request_index' %}">Reseed</a></li>
           <li><a href="{% url 'wiki:root' %}">Wiki</a></li>
