--- a/streisand/www/templates/home.html
+++ b/streisand/www/templates/home.html
@@ -7,6 +7,7 @@
   <div class="page-header">
     <h1>News</h1>
   </div>
+  {% if news_post %}
   <div>
     <h3>{{ news_post.thread.title }}</h3>
     <h6>{{ news_post.created_at|timestamp }}</h6>
@@ -15,4 +16,5 @@
   <div>
     <a href="{{ news_post.thread.topic.get_absolute_url }}">Older news posts</a>
   </div>
+  {% endif %}
 {% endblock %}
