--- a/streisand/www/templates/login.html
+++ b/streisand/www/templates/login.html
@@ -4,10 +4,20 @@
 
 {% block main %}
 
+  {% if request.limited %}
+
+    <div class="page-header">
+      <h1>Slow your roll!</h1>
+    </div>
+    <p>Too many login attempts in a short time period looks suspicious, so we've locked you
+    out for the next two hours.  Go watch a movie, then give it another try. :)</p>
+
+  {% else %}
+
     <div align="center">
     <br/>
     {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+      <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
 
     <form method="post">
@@ -22,5 +32,7 @@
     <input type="hidden" name="next" value="{{ next }}" />
     </form>
     </div>
+
+  {% endif %}
 
 {% endblock %}
