be more vague about lockout timeframe

--- a/streisand/www/templates/login.html
+++ b/streisand/www/templates/login.html
@@ -9,8 +9,8 @@
     <div class="page-header">
       <h1>Slow your roll!</h1>
     </div>
-    <p>Too many login attempts in a short time period looks suspicious, so we've locked you
-    out for the next two hours.  Go watch a movie, then give it another try. :)</p>
+    <p>Too many login attempts in a short time period is suspicious, so we've locked you
+    out for a bit.  Go watch a movie, then give it another try. :)</p>
 
   {% else %}
 
