--- a/streisand/profiles/templates/user_profile_details.html
+++ b/streisand/profiles/templates/user_profile_details.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 
-{% load timestamp_formatting bbcode %}
+{% load timestamp_formatting bbcode staticfiles %}
 
 {% block title %}User Profile{% endblock %}
 
 {% block main %}
     <div class="page-header">
-      <img src="{{ profile.avatar_url }}" width="150">
+      {% if profile.avatar_url %}
+        <img src="{{ profile.avatar_url }}" width="150" />
+      {% else %}
+        <img src="{% static 'profiles/default_avatar.png' %}" width="150" />
+      {% endif %}
       <h1>{{ profile.username }} ({{ profile.user_class }})</h1>
       {% if profile.custom_title %}
         <h6>{{ profile.custom_title }}</h6>
@@ -16,6 +20,7 @@
     <ul>
       <li>Joined: {{ profile.user.date_joined|timestamp }}</li>
       <li>Last Seen: {{ profile.last_seen|timestamp }}</li>
+      <li>Seeding Size: {{ profile.seeding_size }}</li>
       <li>Uploaded: {{ profile.bytes_uploaded|filesizeformat }}</li>
       <li>Downloaded: {{ profile.bytes_downloaded|filesizeformat }}</li>
       <li>Ratio: {{ profile.ratio }}</li>
@@ -23,21 +28,13 @@
       <li>Requests: {{ profile.torrent_requests.count }}</li>
       <li>Film comments: {{ profile.filmcomments.count }}</li>
       <li>Forum posts: {{ profile.forum_posts.count }}</li>
-      <li>Torrents:
-        <ul>
-          {% for ts in profile.torrent_stats.all %}
-            <li>
-              <a href="{{ ts.torrent.get_absolute_url }}">Torrent {{ ts.torrent.id }}</a>
-              ({{ ts.bytes_uploaded }} / {{ ts.bytes_downloaded }})
-            </li>
-          {% endfor %}
-        </ul>
-      </li>
     </ul>
 
-    <div class="well">
-      {{ profile.description|bbcode }}
-    </div>
+    {% if profile.description %}
+      <div class="well">
+        {{ profile.description|bbcode }}
+      </div>
+    {% endif %}
     <div>
       <h3>Recent Snatches</h3>
       {% for torrent in profile.recent_snatches %}
@@ -48,9 +45,9 @@
       </p>
     </div>
     {% if user.is_staff %}
-    <div>
-      <h3>Staff Notes</h3>
-      <pre>{{ profile.staff_notes }}</pre>
-    </div>
+      <div>
+        <h3>Staff Notes</h3>
+        <pre>{{ profile.staff_notes }}</pre>
+      </div>
     {% endif %}
 {% endblock %}
