--- a/streisand/wiki/templates/wiki_article_details.html
+++ b/streisand/wiki/templates/wiki_article_details.html
@@ -6,7 +6,7 @@
 {% block main %}
     <div class="page-header">
       <h1>{{ article.title }}</h1>
-      {% if request.user.is_superuser or article.write_access_minimum_user_class.rank <= request.user.profile.user_class.rank %}
+      {% if request.user.is_superuser or article.write_access_minimum_user_class.rank <= request.user.user_class.rank %}
         <p>
           <a href="{% url 'edit_wiki_article' wiki_article_id=article.id %}">Edit</a>
           |
