--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -1,81 +1,111 @@
-{% load static %}
-<!doctype html>
+<!DOCTYPE html> {% load static %}
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Streisand">
+    <meta name="author" content="">
+    <link rel="icon" href="{% static " www/favicon.ico " %}">
+    <title>{% block title %}Streisand{% endblock %}</title>
+    {% block css %}
+    <!-- Bootstrap 3.3.6 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/lux/bootstrap.min.css">
+    <!-- bbcode CSS -->
+    <link rel="stylesheet" href="{% static 'www/bbcode.css' %}"> {% endblock %}
 
-  <title>{% block title %}{% endblock %} :: Streisand</title>
-  <meta name="description" content="Streisand">
-
-  {% block css %}
-  <!-- Bootstrap 3.3.6 CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-  <!-- bbcode CSS -->
-  <link rel="stylesheet" href="{% static 'www/bbcode.css' %}">
-  {% endblock %}
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
 
-<body style="padding-top: 50px;">
-{% block navbar %}
-  <!-- Fixed navbar -->
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">Streisand</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="{% url 'user_profile_index' %}">Users</a></li>
-          <li><a href="{% url 'film_index' %}">Films</a></li>
-          <li><a href="{% url 'film_list_index' %}">Lists</a></li>
-          <li><a href="{% url 'forum_index' %}">Forums</a></li>
-          <li><a href="{% url 'torrent_request_index' %}">Torrent Requests</a></li>
-          <li><a href="{% url 'reseed_request_index' %}">Reseed</a></li>
-          <li><a href="{% url 'wiki_index' %}">Wiki</a></li>
-        </ul>
-          <div class="navbar-right">
-            <ul class="nav navbar-nav">
-              {% if user.is_authenticated %}
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }} ({{ user.ratio }}) <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="{% url 'user_profile' username=user.username %}">Profile</a></li>
-                    <li><a href="{% url 'invite_index' %}">Invite <span class="badge">{{ user.invite_count }}</span></a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                    <li class="divider"></li>
-                    <li><a href="{% url 'logout' %}">Log out</a></li>
-                  </ul>
-                </li>
-              {% endif %}
-            </ul>
-          </div>
-      </div><!--/.nav-collapse -->
-    </div>
-  </div>
-{% endblock %}
 
-<div class="container theme-showcase" role="main" style="padding-top: 20px;">
-  {% block main %}
-  {% endblock %}
+{% block navbar %}
+<!-- Fixed navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Streisand</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" style="">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'user_profile_index' %}">Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'film_index' %}">Films</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'film_list_index' %}">Film Lists</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'forum_index' %}">Forums</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'torrent_request_index' %}">Torrent Requests</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'reseed_request_index' %}">Reseed</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'wiki_index' %}">Wiki</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search Place Holder">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
+
+<ul class="nav nav-tabs">
+
+    {% if user.is_authenticated %}
+    <li class="nav-item dropdown show">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="true">{{ user.username }} ({{ user.ratio }})<span class="caret"></span></a>
+        <div class="dropdown-menu show" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 39px, 0px); top: 0px; left: 0px; will-change: transform;">
+            <a class="dropdown-item" href="{% url 'user_profile' username=user.username %}">Profile</a>
+            <a class="dropdown-item" href="{% url 'invite_index' %}">Invite <span class="badge badge-info">{{ user.invite_count }}</span></a>
+
+            <a class="dropdown-item" href="#">Something else here</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
+        </div>
+    </li>
+</ul>
+{% endif %}
+</ul>
+</div>
+</div>
+<!--/.nav-collapse -->
+</div>
+</div>
+{% endblock %}
+</ul>
 </div>
 
-<!-- jQuery and Bootstrap 3.2.0 JS -->
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<div class="container theme-showcase" role="main" style="padding-top: 20px;">
+    {% block main %} {% endblock %}
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
