--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Streisand">
     <meta name="author" content="">
-    <link rel="icon" href="{% static " www/favicon.ico " %}">
+    <link rel="icon" href="{% static 'www/favicon.ico' %}">
     <title>{% block title %}Streisand{% endblock %}</title>
     {% block css %}
     <!-- Bootstrap 3.3.6 CSS -->
