--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html> {% load static %}
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en">
-<!--<![endif]-->
 
+<html class="no-js" lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Streisand">
     <meta name="author" content="">
-    <link rel="icon" href="{% static 'www/favicon.ico' %}">
     <title>{% block title %}Streisand{% endblock %}</title>
     {% block css %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/lux/bootstrap.min.css">
     <!-- bbcode CSS -->
     <link rel="stylesheet" href="{% static 'www/bbcode.css' %}"> {% endblock %}
-
-    <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
@@ -28,11 +20,7 @@
 
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Streisand</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" style="">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+
 
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
@@ -40,7 +28,7 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_profile_index' %}">Users</a>
+                <a class="nav-link" href="{% url 'forum-group-list' %}">Users</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'film_index' %}">Films</a>
@@ -71,10 +59,8 @@
     <li class="nav-item dropdown show">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="true">{{ user.username }} ({{ user.ratio }})<span class="caret"></span></a>
         <div class="dropdown-menu show" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 39px, 0px); top: 0px; left: 0px; will-change: transform;">
-            <a class="dropdown-item" href="{% url 'user_profile' username=user.username %}">Profile</a>
-            <a class="dropdown-item" href="{% url 'invite_index' %}">Invite <span class="badge badge-info">{{ user.invite_count }}</span></a>
-
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="/api/v1">API</a>
+            <a class="dropdown-item" href="{% url 'user_profile' username=user.username %}">Something else here</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
         </div>
